[gd_scene load_steps=14 format=2]

[ext_resource path="res://Source/scroller.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Environment/grab_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/screen_bottom.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Character/character_base.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Environment/endgame.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/snowflake.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Environment/walk_surface.tscn" type="PackedScene" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Candara.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
font_data = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1000, 10 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 612, 50, 1 )
flag_disable_z = true
direction = Vector3( 10, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 9.528, 0 )
initial_velocity = 395.15
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 450, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( -1, 9.8, 0 )
initial_velocity = 130.77
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="ScrollerScene" type="Node2D"]
script = ExtResource( 1 )
max_x = 50
max_y = 500
x_limit = 100
y_limit = 600
camera_path = NodePath("Node2D/Camera")
climber1_path = NodePath("Node2D/Climber")
climber2_path = NodePath("Node2D/Climber2")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "test
"

[node name="EndContainer" parent="CanvasLayer/UI/MarginContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="FloorArea" type="Area2D" parent="."]
position = Vector2( 520.588, 580.655 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="FloorArea"]
scale = Vector2( 20, 1 )
texture = ExtResource( 11 )

[node name="Blizzard" type="Particles2D" parent="FloorArea"]
amount = 4000
lifetime = 4.49
randomness = 0.27
process_material = SubResource( 4 )
texture = ExtResource( 6 )

[node name="WalkSurface" parent="." instance=ExtResource( 10 )]
position = Vector2( 64.183, 169.726 )

[node name="GrabArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 73.0693, 52.1354 )
scale = Vector2( 4, 4 )

[node name="GrabArea2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -276.71 )

[node name="GrabArea3" parent="." instance=ExtResource( 2 )]
position = Vector2( 180.109, -202.547 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]

[node name="TileMap" parent="Node2D" index="0"]
tile_data = PoolIntArray( 393215, 6, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 3, 0 )

[node name="Particles2D" type="Particles2D" parent="Node2D/Camera" index="0"]
position = Vector2( -508.487, -71.2449 )
amount = 100
lifetime = 10.0
preprocess = 10.0
process_material = SubResource( 5 )
texture = ExtResource( 6 )

[editable path="Node2D"]
